# MyWay-MidasObstacleDetection-flutter

./: README.md  pubspec.yaml  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  image_utils.cpp  image_utils.h  ransac.cpp
android/app/src/main/kotlin/com/example/assistive_perception_app/: MainActivity.kt
app/: build.gradle.kts
app/src/androidTest/java/com/example/depthperceptionapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  ransac.cpp  ransac.h  yuv_converter.cpp  yuv_converter.h
app/src/main/java/com/example/depthperceptionapp/: Config.kt  MainActivity.kt
app/src/main/java/com/example/depthperceptionapp/analysis/: AnalysisManager.kt  DetectionState.kt  ObstacleDetector.kt  PathAnalyzer.kt  VisualizationData.kt  WallFinder.kt
app/src/main/java/com/example/depthperceptionapp/camera/: CameraHandler.kt  DepthAnalyzer.kt
app/src/main/java/com/example/depthperceptionapp/feedback/: AudioCues.kt  FeedbackManager.kt  TTSManager.kt
app/src/main/java/com/example/depthperceptionapp/ndk/: NativeBridge.kt  NdkBridge.kt
app/src/main/java/com/example/depthperceptionapp/tflite/: DepthPredictor.kt  TFLiteService.kt
app/src/main/java/com/example/depthperceptionapp/ui/: CalibrationActivity.kt  CameraActivity.kt  CameraPreviewFragment.kt  OverlayView.kt  ViewModel.kt
app/src/main/res/layout/: activity_calibration.xml  activity_camera.xml  activity_main.xml  fragment_camera.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/depthperceptionapp/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: depth_analysis_result.dart  enums.dart
lib/services/: audio_feedback_service.dart  camera_service.dart  depth_analyzer.dart  preprocessing_service.dart  tflite_service.dart
lib/utils/: ffi_bindings.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
opencv/: build.gradle
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
